# ROS2-ERP42-TrafficLight

./: .gitignore  README.md
docs/: architecture.md  state-machine.md  traffic-light-control.md
ros2_ws/src/create_trajectory/: global path 사용법  package.xml  setup.cfg  setup.py  txtfile.py
ros2_ws/src/create_trajectory/create_trajectory/: cone_pub.py  coord_converter.py  dummy.py  fake_initialpose.py  find_lane_id.py  goalpose_publisher 코드설명  marker.py  pcd_convert.py  roi_pls.py  save_waypoint.py  trajectory.py  waypoint_publisher.py  waypoints.py
ros2_ws/src/create_trajectory/resource/: saved_waypoints.txt
ros2_ws/src/darknet_ros_yolov4/darknet_ros/darknet_ros/config/: yolov4_bs.yaml  yolov4_cone_tracking.yaml
ros2_ws/src/darknet_ros_yolov4/darknet_ros/darknet_ros/launch/: bs.launch.py  (+3 more)
ros2_ws/src/erp42/erp42_control/: setup.py
ros2_ws/src/erp42/erp42_control/erp42_control/: DB.py  controller_cone.py  controller_delivery.py  controller_obstacle.py  controller_obstacle_ys.py  controller_parking.py  controller_pickup.py  controller_stop_line.py  controller_traffic_light.py  controller_uturn.py  pid_tunning.py  stanley.py  stanley_cone.py  state_machine.py  state_machine_ys.py  state_machine_ys_test.py
ros2_ws/src/localization/: setup.py
ros2_ws/src/localization/launch/: navsat_transform.launch.py
ros2_ws/src/localization/localization/: erp_twist.py  kalman_localization.py  rotate_yaw.py
ros2_ws/src/localization/params/: param_ekf.yaml
ros2_ws/src/opencv_lane/opencv_lane/: lane_detection.py
ros2_ws/src/tf/src/: map_odom_tf_publisher_static.cpp
(+4 files in other folders)
