<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>create_trajectory</name>
  <version>0.0.1</version>
  <description>The create_trajectory package</description>
  <maintainer email="ps7375@naver.com">ps</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>autoware_auto_planning_msgs</depend>
  <depend>autoware_perception_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visuatlization_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
